# CS230-Project

./: CMakeLists.txt  Calculations.cpp  Calculations.h  Contestant.h  FIleIO.cpp  FileIO.h  Main.cpp  Menu.cpp  Menu.h  Sorting.cpp  Sorting.h  main.cpp
Resources/: social_media_contest_data.txt
